--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <head>
         <title>RP - strona główna</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        
+    </body>
 </html>
